Fix quote image resizing on smaller screens

--- a/style.css
+++ b/style.css
@@ -558,6 +558,7 @@ body {
 
   #fred-holding-guitar {
     width: 100%;
+    height: auto;
   }
 
   .gallery-container {
